--- a/index.html
+++ b/index.html
@@ -6,21 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Durian</title>
     <link rel="stylesheet" href="./resources/css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Header section -->
     <header>
         <div class=logo>
-            <span>Duriano</span>
+            <span><a href="#">Duriano</a></span>
         </div>
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Products</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact Us</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact Us</a></li>
             </ul>
         </nav>
     </header>
+
+    <!-- Banner Section -->
+    <section class=banner>
+        <div class=main-background>
+            <img src="background-image: url(/Users/naaabee/Desktop/VSCode/durianproj/resources/images/IMG_8527.PNG);" alt="">
+        </div>
+    </section>
 </body>
 </html>
 
