addded background and main banner

--- a/index.html
+++ b/index.html
@@ -25,11 +25,17 @@
             </ul>
         </nav>
     </header>
+    
+    <!-- Main Background -->
+    
 
     <!-- Banner Section -->
     <section class=banner>
         <div class=main-background>
-            <img src="background-image: url(/Users/naaabee/Desktop/VSCode/durianproj/resources/images/IMG_8527.PNG);" alt="">
+            <img src="/Users/naaabee/Desktop/VSCode/durianproj/resources/images/IMG_8527.PNG" alt="bg-img">
+        </div>
+        <div class=main-banner>
+            <img src="/Users/naaabee/Desktop/VSCode/durianproj/resources/images/pesce-huang-T2NJ74BKKIA-unsplash.jpg" alt="main-banner-img">
         </div>
     </section>
 </body>
