changed image link

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <!-- Left Banner Section -->
     <section class=banner>
         <div class=main-background>
-            <img src="/Users/naaabee/Desktop/VSCode/durianproj/resources/images/IMG_8527.PNG" alt="bg-img">
+            <img src="./resources/images/IMG_8527.PNG" alt="bg-img">
         </div>
         <div class=main-banner>
-            <img src="/Users/naaabee/Desktop/VSCode/durianproj/resources/images/pesce-huang-T2NJ74BKKIA-unsplash.jpg" alt="main-banner-img">
+            <img src="./resources/images/pesce-huang-T2NJ74BKKIA-unsplash.jpg" alt="main-banner-img">
         </div>
     
 
